ops/vpn/iptables/iptables
# Generated by iptables-save v1.6.0 on Sat May 26 10:12:50 2018
*filter
:INPUT ACCEPT [4884159:1326612100]
:FORWARD ACCEPT [3155300:2809181555]
:OUTPUT ACCEPT [4731682:3822395521]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -s 10.47.136.50/32 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sat May 26 10:12:50 2018
# Generated by iptables-save v1.6.0 on Sat May 26 10:12:50 2018
*nat
:PREROUTING ACCEPT [2:128]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:52]
:POSTROUTING ACCEPT [1:52]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.30.10.0/24 -d 192.168.10.0/24 -p tcp -m comment --comment "vpc subnet for bi-e" -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -d 172.16.30.6/32 -o tun0 -j MASQUERADE
-A POSTROUTING -d 192.168.5.0/24 -o tun0 -j MASQUERADE
-A POSTROUTING -d 192.168.11.221/32 -o tun0 -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 60.191.0.82/32 -m comment --comment "ip.cn for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 104.16.24.88/32 -m comment --comment "ip.cn for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 104.16.24.88/32 -p tcp -m tcp --dport 443 -m comment --comment "https://ip.cn for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 182.92.26.235/32 -p tcp -m tcp --dport 443 -m comment --comment "https://athena.cashbus.com for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 47.93.67.67/32 -p tcp -m tcp --dport 443 -m comment --comment "https://marketing.cashbus.com for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 59.110.90.33/32 -p tcp -m tcp --dport 443 -m comment --comment "https://athena-xhed.cashbus.com for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 59.110.144.241/32 -p tcp -m tcp --dport 8070 -m comment --comment "http://apollo-portal.cashbus.com:8070/ for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 59.110.127.113/32 -p tcp -m tcp --dport 8090 -m comment --comment "http://59.110.127.113:8090 for all" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 39.107.207.247/32  -m comment --comment "https://code.cashbus.com for all" -j MASQUERADE
-A POSTROUTING -s 172.30.1.0/24 -d 47.94.79.97/32 -p tcp -m tcp --dport 443 -m comment --comment "https://cashbus-thirdparty.cashbus.com for spider" -j MASQUERADE
-A POSTROUTING -s 172.30.1.0/24 -d 47.94.79.97/32 -p tcp -m tcp --dport 80 -m comment --comment "http://cashbus-teldata02.cashbus.com for spider" -j MASQUERADE
-A POSTROUTING -s 172.30.1.0/24 -d 182.92.140.13/32 -p tcp -m tcp --dport 443 -m comment --comment "https://proxy-service.cashbus.com for spider" -j MASQUERADE
-A POSTROUTING -s 172.30.1.0/24 -d 59.110.127.113/32 -p tcp -m tcp --dport 8888 -m comment --comment "http://59.110.127.113:8888 storm-ui for spider" -j MASQUERADE
-A POSTROUTING -s 172.30.2.0/24 -d 47.94.112.143/32 -p tcp -m tcp --dport 443 -m comment --comment "https://hrhx-ymer-admin.haoren.com for product" -j MASQUERADE
-A POSTROUTING -s 172.30.2.0/24 -d 60.205.232.93/32  -m comment --comment "https://debt-admin.cashbus.com:8443 for product" -j MASQUERADE
-A POSTROUTING -s 172.30.2.0/24 -d 47.95.49.223/32  -m comment --comment "https://channel-admin-forcam.cashbus.com for product" -j MASQUERADE
-A POSTROUTING -s 172.30.2.0/24 -d 47.94.112.143/32  -m comment --comment "http://admin.51ddhua.com for product" -j MASQUERADE
-A POSTROUTING -s 172.30.2.0/24 -d 39.106.253.83/32  -m comment --comment "http://ares-admin.cashbus.com for product" -j MASQUERADE
-A POSTROUTING -s 172.30.2.0/24 -d 192.168.253.39/32 -m comment --comment "vpc pgsql for product" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 60.205.132.73/32 -p tcp -m tcp --dport 8090 -m comment --comment "http://confluence.cashbus.com:8090 for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 101.201.78.156/32 -p tcp -m tcp --dport 22 -m comment --comment "classic jump" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 101.201.78.156/32 -p tcp -m tcp --dport 10022 -m comment --comment "classic bastion" -j MASQUERADE
-A POSTROUTING -s 172.30.22.0/24 -m comment --comment "super administrator" -j MASQUERADE
-A POSTROUTING -s 172.30.10.0/24 -d 60.205.232.93/32  -m comment --comment "https://debt-admin.cashbus.com:8443 for bi" -j MASQUERADE
-A POSTROUTING -s 172.30.10.0/24 -d 192.168.10.0/24 -p tcp -m comment --comment "vpc subnet for bi-e" -j MASQUERADE
-A POSTROUTING -s 172.30.10.0/24 -d 192.168.253.39/32 -m comment --comment "vpc pgsql for bi-e" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 59.110.144.241/32 -p tcp -m tcp --dport 8081 -m comment --comment "http://nx.cashbus.com:8081/ for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 59.110.144.241/32 -p tcp -m tcp --dport 80 -m comment --comment "jenkins for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 118.178.171.30/32 -p tcp -m tcp --dport 443 -m comment --comment "https://athena.umibank.com/#/ for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 59.110.127.113/32 -p tcp -m tcp --dport 443 -m comment --comment "https://monitor-vpc.cashbus.com/ for common" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 60.205.12.113/32 -p tcp -m tcp --dport 4443 -m comment --comment "bi-report https://bi-report.cashbus.com:4443" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 60.205.12.113/32 -p tcp -m tcp --dport 443 -m comment --comment "bi dsp https://bi.cashbus.com" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 60.205.232.231/32  -m comment --comment "vpc jump" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 121.196.217.121/32 -p tcp -m tcp --dport 22 -m comment --comment "umi jump for platform" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 39.107.222.178/32 -p tcp -m tcp --dport 22 -m comment --comment "risk portal for platform" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 161.117.95.194/32 -m comment --comment "k8s singapore for platform" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 161.117.70.182/32 -m comment --comment "k8s singapore for platform" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 47.95.74.118/32 -p tcp -m tcp --dport 3306 -m comment --comment "testdrds for platform" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 47.93.69.42/32 -m comment --comment "k8s platform for platform" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 149.129.193.65/32 -m comment --comment "k8s indonesia for platform" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 118.178.63.93/32 -m comment --comment "umibankdb for platform" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 121.43.184.129/32  -m comment --comment "umi gitlab for platform" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 60.205.232.231/32  -m comment --comment "vpc jump" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 59.110.227.130/32  -m comment --comment "vpc testing" -j MASQUERADE
-A POSTROUTING -s 172.30.100.0/24 -d 60.205.84.184/32 -m comment --comment "risk-cluster-vpc-pub for data" -j MASQUERADE
-A POSTROUTING -s 172.30.100.0/24 -d 47.94.119.169/32 -m comment --comment "offline for data" -j MASQUERADE
-A POSTROUTING -s 172.30.100.0/24 -d 192.168.253.41/32 -m comment --comment "graphsql for data" -j MASQUERADE
-A POSTROUTING -s 172.30.100.0/24 -d 47.95.95.7/32 -m comment --comment "offline-testing for data" -j MASQUERADE
-A POSTROUTING -s 172.30.100.0/24 -d 47.94.118.220/32 -m comment --comment "data-vpc for data" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 59.110.89.212/32 -m comment --comment "vpc testing for all" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 47.95.99.60/32 -m comment --comment "vpc k8s testing for all" -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 -d 47.94.188.150/32 -m comment --comment "test db for all" -j MASQUERADE
-A POSTROUTING -s 172.30.255.0/24 -d 123.56.215.244/32 -p tcp -m tcp --dport 443 -m comment --comment "https://wb.cashbus.com for thirdparty" -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sat May 26 10:12:50 2018
